fixed overflow

--- a/Melissa/styles/about-media.css
+++ b/Melissa/styles/about-media.css
@@ -6,6 +6,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        width: 100vw;
     }
 
     .header
@@ -21,6 +22,7 @@
     nav
     {
         height: 100vh;
+        width: 100vw;
     }
 
     /* h1 in the header */
